--- a/网页设计.html
+++ b/网页设计.html
@@ -1,14 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
 
-    </style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    /* 清除默认样式代码 */
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    hr,
+    p,
+    ul,
+    ol,
+    i,
+    dl,
+    dt,
+    dd,
+    input {
+      margin: 0;
+      padding: 0;
+    }
+
+    * {
+      /* 內减模式 */
+      box-sizing: border-box;
+    }
+
+    /* 设置网页统一的大小、行高、字体系列相关属性 */
+    body {
+      font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
+      color: #333;
+
+      ;
+    }
+
+    /* 去除列表默认样式 */
+    ul,
+    ol {
+      list-style: none;
+    }
+
+    /* 去除默认倾斜效果 */
+    em,
+    i {
+      font-style: normal;
+    }
+
+    /* 去除a标签默认下划线，并设置默认文字颜色 */
+    a {
+      text-decoration: none;
+      color: #333;
+    }
+
+    /* 设置img的垂直对齐方式为居中对齐，去除img默认下间隙 */
+    img {
+      vertical-align: middle;
+    }
+
+    /* 去除input默认样式 */
+    input {
+      border: none;
+      outline: none;
+      color: #333;
+    }
+
+    /* 左浮动 */
+    .fl {
+      float: left;
+    }
+
+    /* 右浮动 */
+    .fr {
+      float: right;
+    }
+
+    /* 双伪元素清除浮动 */
+    .clearfix:before,
+    .clearfix:after {
+      content: "";
+      display: table;
+    }
+
+    .clearfix:after {
+      clear: both;
+    }
+  </style>
 </head>
+
 <body>
   廖先成nb
 </body>
+
 </html>
