--- a/网页设计.html
+++ b/网页设计.html
@@ -36,8 +36,7 @@
     body {
       font: 16px/1.5 "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
       color: #333;
-
-      ;
+      background-color: #f6f6f6;
     }
 
     /* 去除列表默认样式 */
@@ -90,10 +89,83 @@
     .clearfix:after {
       clear: both;
     }
+
+    img {
+      width: 1300px;
+    }
+    .lj0{
+      width: 1380px;
+      margin: 0 auto;
+    }
+
+    .lj1 {
+      width: 1200px;
+      float: right;
+    }
+
+    .lj1 {
+      display: block;
+    }
+
+    .lj2 {
+      margin: 10px;
+      background-color: white;
+      width: 150px;
+      margin: 20px,20px;
+    }
+    .lj3{
+      font-size: 24px;
+    }
+
+    li {
+      padding: 25px;
+      text-align: center;
+    }
+    li:hover{
+      color: aqua;
+      list-style:circle ;
+    }
   </style>
 </head>
-<body>
-<img src="./day 9-小兔鲜项目素材/uploads/avatar_1.png" alt="">
-</body>
 
+<body>
+  <div class="lj0">
+  <div class="lj1">
+    <img src="/day 9-小兔鲜项目素材/images/logo1.png" alt="">
+  </div>
+  <div class="lj2">
+    <ul>
+      <a href="#" class="lj3"><li><strong>我的账户</strong></li></a>
+      <a href="#"><li>个人中心</li></a>
+      <a href="#"><li>消息通知</li></a>
+      <a href="#"><li>个人信息</li></a>
+      <a href="#"><li>安全设置</li></a>
+      <a href="#"><li>地址管理</li></a>
+      <a href="#"><li>我的积分</li></a>
+      <a href="#"><li>我的足迹</li></a>
+      <a href="#"><li>邀请有礼</li></a>
+      <a href="#"><li>新运抽奖</li></a>
+    </ul>
+  </div>
+
+  <div class="lj2">
+    <ul>
+      <a href="#" class="lj3"><li><strong>我的账户</strong></li></a>
+      <a href="#"><li>交易管理</li></a>
+      <a href="#"><li>我的订单</li></a>
+      <a href="#"><li>优惠卷</li></a>
+      <a href="#"><li>礼品卡</li></a>
+      <a href="#"><li>评价晒单</li></a>
+      <a href="#"><li>售后服务</li></a>
+    </ul>
+  </div>
+  <div class="lj2">
+    <ul>
+      <a href="#"><li class="lj3"><strong>我的收藏</strong></li></a>
+      <a href="#"><li>收藏的商品</li></a>
+      <a href="#"><li>收藏的专题</li></a>
+      <a href="#"><li>关注的品牌</li></a>
+    </ul>
+  </div>
+</div>
 </html>
