--- a/网页设计.html
+++ b/网页设计.html
@@ -93,14 +93,15 @@
     img {
       width: 1300px;
     }
-    .lj0{
+
+    .lj0 {
       width: 1380px;
       margin: 0 auto;
     }
 
     .lj1 {
+      margin-top: 10px;
       width: 1200px;
-      float: right;
     }
 
     .lj1 {
@@ -111,61 +112,127 @@
       margin: 10px;
       background-color: white;
       width: 150px;
-      margin: 20px,20px;
     }
-    .lj3{
-      font-size: 24px;
+
+    .lj0 .nonefix {
+      float: none;
+    }
+
+    .lj3 {
+      font-size: 25px;
     }
 
     li {
       padding: 25px;
       text-align: center;
     }
-    li:hover{
+
+    li:hover {
       color: aqua;
-      list-style:circle ;
+      list-style: circle;
+    }
+
+    .sp-size img {
+      width: 100px;
+    }
+
+    .lj4 {
+      width: 500px;
+      height: 100px;
+      background-color: white;
     }
   </style>
 </head>
 
 <body>
   <div class="lj0">
-  <div class="lj1">
-    <img src="/day 9-小兔鲜项目素材/images/logo1.png" alt="">
-  </div>
-  <div class="lj2">
-    <ul>
-      <a href="#" class="lj3"><li><strong>我的账户</strong></li></a>
-      <a href="#"><li>个人中心</li></a>
-      <a href="#"><li>消息通知</li></a>
-      <a href="#"><li>个人信息</li></a>
-      <a href="#"><li>安全设置</li></a>
-      <a href="#"><li>地址管理</li></a>
-      <a href="#"><li>我的积分</li></a>
-      <a href="#"><li>我的足迹</li></a>
-      <a href="#"><li>邀请有礼</li></a>
-      <a href="#"><li>新运抽奖</li></a>
-    </ul>
+    <div class="lj1 fr">
+      <img src="/day 9-小兔鲜项目素材/images/logo1.png" alt="">
+    </div>
+    <div class="fl">
+      <div class="lj2">
+        <ul>
+          <a href="#" class="lj3">
+            <li><strong>我的账户</strong></li>
+          </a>
+          <a href="#">
+            <li>个人中心</li>
+          </a>
+          <a href="#">
+            <li>消息通知</li>
+          </a>
+          <a href="#">
+            <li>个人信息</li>
+          </a>
+          <a href="#">
+            <li>安全设置</li>
+          </a>
+          <a href="#">
+            <li>地址管理</li>
+          </a>
+          <a href="#">
+            <li>我的积分</li>
+          </a>
+          <a href="#">
+            <li>我的足迹</li>
+          </a>
+          <a href="#">
+            <li>邀请有礼</li>
+          </a>
+          <a href="#">
+            <li>新运抽奖</li>
+          </a>
+        </ul>
+      </div>
+
+      <div class="lj2">
+        <ul>
+          <a href="#" class="lj3">
+            <li><strong>我的账户</strong></li>
+          </a>
+          <a href="#">
+            <li>交易管理</li>
+          </a>
+          <a href="#">
+            <li>我的订单</li>
+          </a>
+          <a href="#">
+            <li>优惠卷</li>
+          </a>
+          <a href="#">
+            <li>礼品卡</li>
+          </a>
+          <a href="#">
+            <li>评价晒单</li>
+          </a>
+          <a href="#">
+            <li>售后服务</li>
+          </a>
+        </ul>
+      </div>
+      <div class="lj2">
+        <ul>
+          <a href="#">
+            <li class="lj3 "><strong>我的收藏</strong></li>
+          </a>
+          <a href="#">
+            <li>收藏的商品</li>
+          </a>
+          <a href="#">
+            <li>收藏的专题</li>
+          </a>
+          <a href="#">
+            <li>关注的品牌</li>
+          </a>
+        </ul>
+      </div>
+    </div>
+    <div class="lj4">
+      <span>我的订单</span>
+      <div class="sp-size"><img src="/day 9-小兔鲜项目素材/uploads/clothes_goods_5.jpg" alt=""></div>
+      <div></div>
+      <div></div>
+    </div>
   </div>
 
-  <div class="lj2">
-    <ul>
-      <a href="#" class="lj3"><li><strong>我的账户</strong></li></a>
-      <a href="#"><li>交易管理</li></a>
-      <a href="#"><li>我的订单</li></a>
-      <a href="#"><li>优惠卷</li></a>
-      <a href="#"><li>礼品卡</li></a>
-      <a href="#"><li>评价晒单</li></a>
-      <a href="#"><li>售后服务</li></a>
-    </ul>
-  </div>
-  <div class="lj2">
-    <ul>
-      <a href="#"><li class="lj3"><strong>我的收藏</strong></li></a>
-      <a href="#"><li>收藏的商品</li></a>
-      <a href="#"><li>收藏的专题</li></a>
-      <a href="#"><li>关注的品牌</li></a>
-    </ul>
-  </div>
-</div>
 </html>
