--- a/网页设计.html
+++ b/网页设计.html
@@ -56,7 +56,8 @@
       color: aqua;
       list-style: circle;
     }
-     .lj4 a{
+
+    .sp-all {
       position: relative;
       bottom: 20px;
       color: #b6b6b6;
@@ -64,12 +65,12 @@
 
     .sp-imgsize {
       display: block;
-      width: 500px;
-      height: 100px;
+      width: 700px;
+      height: 200px;
     }
 
     .sp-imgsize img {
-      width: 98px;
+      width: 195px;
     }
 
     .lj4 {
@@ -77,13 +78,13 @@
       padding: 10px;
       display: block;
       width: 1190px;
-      height: 200px;
+      height: 500px;
       background-color: white;
     }
 
     .lj4 ul {
-      margin-top:10px ;
-      height: 100px;
+      margin-top: 10px;
+      height: 200px;
       border: 1px, solid, #b6b6b650;
     }
 
@@ -94,8 +95,9 @@
     }
 
     .sp-name {
-      padding: 25px 0 0 0;
-      width: 220px;
+      padding: 70px 0 0 0;
+      width: 270px;
+      font-size: 20px;
       overflow: hidden;
       /*超出部分隐藏*/
       white-space: nowrap;
@@ -112,17 +114,39 @@
     .sp-zt {
       position: relative;
       bottom: 35px;
-      right: 80px;
+      right: 120px;
       color: #e05e30;
     }
-    .sp-price{
+
+    .sp-price {
+      font-size: 20px;
       text-align: center;
-      height:100px;
-      width:200px;
+      height: 200px;
+      width: 265px;
     }
-    .sp-zprice{
-      margin-top: 10px;
+
+    .sp-zprice {
+      margin-top: 50px;
       color: red;
+    }
+
+    .sp-xq {
+      height: 190px;
+      width: 200px;
+      font-size: 20px;
+      text-align: center;
+    }
+
+    .sp-fk {
+      height: 30px;
+      width: 120px;
+      margin-top: 35px;
+      margin-left: 40px;
+      background-color: #27ba9b;
+    }
+
+    .sp-fk a {
+      color: white;
     }
   </style>
 </head>
@@ -253,7 +277,7 @@
     </div>
     <div class="lj4 fl">
       <h5>我的订单</h5>
-      <a class="fr" href="#">查看全部 ></a>
+      <a class="sp-all fr" href="#">查看全部 ></a>
       <ul>
         <li class="sp-imgsize fl">
           <img class="fl" src="./static/uploads/clothes_goods_5.jpg" alt="">
@@ -266,9 +290,12 @@
           <p>(含运费：¥10.00元)</p>
           <p>在线支付</p>
         </li>
-        <li>立即付款</li>
+        <li class="sp-xq fl">
+          <p class="sp-fk"><a href="#">立即付款</a></p>
+          <p><a href="#">查看详情</a></p>
+          <p><a href="#">取消订单</a></p>
+        </li>
       </ul>
-
 
     </div>
   </div>
