--- a/网页设计.html
+++ b/网页设计.html
@@ -269,6 +269,33 @@
         <li>立即付款</li>
       </ul>
 
+      <ul>
+        <li class="sp-imgsize fl">
+          <img class="fl" src="/static/uploads/clothes_goods_6.jpg" alt="">
+          <p class="sp-name">李宁跑步鞋男空气弧</p>
+          <p class="sp-size">颜色：灰色 尺码：42 数量：1</p>
+          <p class="sp-zt fr">待收货</p>
+        </li>
+        <li class="sp-price fl">
+          <p class="sp-zprice">¥199.00</p>
+          <p>(含运费：¥10.00元)</p>
+          <p>在线支付</p>
+        </li>
+        <li>确认收货</li>
+      </ul>
+
+      <div class="xtx5">
+        <div class="xtx6"><p>我的收藏</p></div> 
+      </div>
+
+      <div>
+          <div class="xtx7"><!--绿色背景-->
+            <a href="#"><img src="./" alt="">
+                <p>睿米无线吸尘器F8</p>
+                <div>&yen<span>899</span></div>
+            </a>
+          </div>
+      </div>
 
     </div>
   </div>
