--- a/网页设计.html
+++ b/网页设计.html
@@ -299,7 +299,7 @@
 
       <ul>
         <li class="sp-imgsize fl">
-          <img class="fl" src="/static/uploads/clothes_goods_6.jpg" alt="">
+          <img class="fl" src="./static/uploads/clothes_goods_6.jpg" alt="">
           <p class="sp-name">李宁跑步鞋男空气弧</p>
           <p class="sp-size">颜色：灰色 尺码：42 数量：1</p>
           <p class="sp-zt fr">待收货</p>
@@ -309,23 +309,39 @@
           <p>(含运费：¥10.00元)</p>
           <p>在线支付</p>
         </li>
-        <li>确认收货</li>
+        <li class="sp-xq fl">
+          <p class="sp-fk"><a href="#">立即收货</a></p>
+          <p><a href="#">查看详情</a></p>
+          <p><a href="#">确认收货</a></p>
+        </li>
       </ul>
 
       <div class="xtx5">
         <div class="xtx6"><p>我的收藏</p></div> 
       </div>
 
+     
+
+    </div>
+
       <div>
           <div class="xtx7"><!--绿色背景-->
-            <a href="#"><img src="./" alt="">
-                <p>睿米无线吸尘器F8</p>
-                <div>&yen<span>899</span></div>
-            </a>
+            <!-- <a href="#"><!--<img src="./static/uploads/brand_goods_2.jpg" alt=""> -->
+                <!-- <p>沙宣经典洗护套装<br>750ml送200ml<br>洗护用品</p>
+                <div>&yen<span>899</span></div> -->
+            <ul>
+              <li><a href="#"><img src="" alt=""></a></li>
+              <li><a href="#"><img src="" alt=""></a></li>
+              <li><a href="#"><img src="" alt=""></a></li>
+              <li><a href="#"><img src="" alt=""></a></li>
+            </ul>
+
+
+
           </div>
       </div>
-    </div>
-  </div>
+
+  </div> 
 
   <!-- 版权区域 -->
   <div class="footer">
