--- a/网页设计.html
+++ b/网页设计.html
@@ -18,8 +18,8 @@
     body {
       background-color: #f6f6f6;
     }
-    
-    .nb{
+
+    .nb {
       padding-top: 0.1px;
       height: 130px;
       background-color: white;
@@ -37,7 +37,7 @@
     }
 
     .lj1 {
-      margin-top: 10px;
+      margin-top: 20px;
       width: 1200px;
     }
 
@@ -48,6 +48,7 @@
     .lj2 {
       display: block;
       margin: 10px;
+      margin-top: 20px;
       background-color: white;
       width: 150px;
     }
@@ -85,6 +86,7 @@
 
     .lj4 {
       margin: 10px;
+      margin-top: 20px;
       padding: 10px;
       display: block;
       width: 1190px;
@@ -164,6 +166,14 @@
 
     .sp-fk a {
       color: white;
+    }
+    .lj5{
+      width: 1200px;
+      margin-left: 10px;
+      margin-top: 10px;
+      height: 250px;
+      display: block;
+      background-color: white;
     }
   </style>
 </head>
@@ -333,6 +343,18 @@
           <p><a href="#">查看详情</a></p>
           <p><a href="#">取消订单</a></p>
         </li>
+      </ul>
+    </div>
+    <!-- 我的收藏 -->
+    <div class="lj5 fl">
+      <h5>我的收藏</h5>
+      <ul>
+        <li>
+          <img src="" alt="">
+        </li>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
+        <li><img src="" alt=""></li>
       </ul>
     </div>
   </div>
