--- a/网页设计.html
+++ b/网页设计.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
@@ -168,7 +168,7 @@
       color: white;
     }
     .lj5{
-      width: 1200px;
+      width: 1190px;
       margin-left: 10px;
       margin-top: 10px;
       height: 250px;
