--- a/网页设计.html
+++ b/网页设计.html
@@ -196,7 +196,7 @@
     }
 
     .lj5 ul li {
-      margin: 25px 25px 0 25px;
+      margin: 60px 25px 20px 25px;
     }
 
     .lj5 ul img {
@@ -220,7 +220,7 @@
     }
 
     .lj6 ul li {
-      margin: 25px 25px 0 25px;
+      margin: 60px 25px 20px 25px;
     }
 
     .lj6 ul img {
