--- a/网页设计.html
+++ b/网页设计.html
@@ -406,7 +406,7 @@
     <div class="lj5 fl">
       <h5>我的收藏</h5>
       <ul>
-        <li class="fl"><a href="">
+        <li class="fl"><a href="#">
             <img src="/static/uploads/sp-1.jpg" alt="">
             <p>沙宣经典洗护套装</p>
             <p>750ml送200ml</p>
@@ -440,7 +440,7 @@
     <div class="lj6 fl">
       <h5>我的足迹</h5>
       <ul>
-        <li class="fl"><a href="">
+        <li class="fl"><a href="#">
             <img src="/static/uploads/sp-1.jpg" alt="">
             <p>沙宣经典洗护套装</p>
             <p>750ml送200ml</p>
