--- a/网页设计.html
+++ b/网页设计.html
@@ -500,7 +500,7 @@
             <img src="/static/uploads/sp-3.jpg" alt="">
             <p>三都港冷冻无公害黄花鱼</p>
             <p>700g 2条 袋装</p>
-            <p>海鲜水产6666666</p>
+            <p>海鲜水产</p>
             <p class="jg">&yen49</p>
           </a><button class="delete-item" data-item-id="1">✖️</button></li>
       </ul>
