--- a/denlu.html
+++ b/denlu.html
@@ -63,7 +63,7 @@
                         <a href="javascript:;">《隐私政策》</a>
                     </div>
                     <div>
-                        <button type="submit">登录</button>
+                        <button class="dl6" type="submit">登录</button>
                     </div>
                     <div>
                         <a href="./mima.html" class="bd">忘记密码？</a>
