--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="javascript:;" id="receivedPhone">☠️</a></li>
                 <li><a href="./index.html">退出登录</a></li>
-                <li><a href="javascript:;">我的订单</a></li>
+                <li><a href="./order.html">我的订单</a></li>
                 <li><a href="./网页设计.html">个人中心</a></li>
                 <li class="bangzhu1"><a href="javascript:;">帮助中心</a>
                     <div class="bangzhu">
