--- a/order.html
+++ b/order.html
@@ -4,13 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>填写订单</title>
-    <link rel="stylesheet" href="./lib/iconfont/iconfont.css">
+    <title>小兔鲜儿-新鲜、惠民、快捷！</title>
+    <meta name="description" content="小兔鲜儿官网，致力于打造全球最大的食品、生鲜电商购物平台。">
+    <meta name="keywords" content="小兔鲜儿,食品,生鲜,服装,家电,电商,购物">
+    <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/iconfont.css">
     <link rel="stylesheet" href="./css/order.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
 
 <body>
+    <div class="shortcut" id="cuansong">
+        <div class="wrapper">
+            <ul>
+                <li><a href="javascript:;" id="receivedPhone">☠️</a></li>
+                <li><a href="./index.html">退出登录</a></li>
+                <li><a href="javascript:;">我的订单</a></li>
+                <li><a href="./网页设计.html">个人中心</a></li>
+                <li class="bangzhu1"><a href="javascript:;">帮助中心</a>
+                    <div class="bangzhu">
+                        <p>有事找啊杰</p>
+                        <p>热线:10086</p>
+                    </div>
+                </li>
+                <li class="bangzhu1"><a href="javascript:;">在线客服</a>
+                    <div class="bangzhu bangzhu2">
+                        <p>小本生意🫡没有客服</p>
+                    </div>
+                </li>
+                <li><a href="javascript:;"><span></span>手机版</a></li>
+            </ul>
+        </div>
+    </div>
+
     <!-- 主体模块 -->
     <main class="main">
         <!-- 个人信息 -->
@@ -84,7 +111,7 @@
         </div>
     </main>
     <!-- 页面底部 -->
-    <footer class="footer">
+    <footer class="footer1">
         <div class="price">
             合计：<span>￥<i>250</i>.00</span>
         </div>
